# EnergiBridge_RPC

./: .gitignore  .gitmodules  README.md  test.py
cpp/: CMakeLists.txt  main.cpp  spec.json
cpp/example/: client.cpp  server.cpp
py/: .gitignore  README.md  experiment.py  reformat.py  requirements.txt  results.pkl  results_analysis.ipynb  results_sleep.pkl  results_sleep_analysis.ipynb  setup.py  test.py
py/examples/: example_usage.py
py/rpc_measure/: __init__.py  decorator.py
py/tests/: test_decorator.py
ts/: client.ts  package-lock.json  package.json  server.ts  tsconfig.json
